[gd_scene load_steps=7 format=3 uid="uid://bghnhrn6geaus"]

[ext_resource type="Theme" uid="uid://birea8mlkoq0q" path="res://UI/themes/default_theme.tres" id="1_0l8rw"]
[ext_resource type="Script" path="res://menus/sign-up.gd" id="1_jw0nw"]
[ext_resource type="Texture2D" uid="uid://cmcmcn1frjeiq" path="res://gameplay/sprites/Asset 7ekans-pixel-art.png" id="3_nxv4n"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8ybq3"]
bg_color = Color(0.360784, 0.623529, 0.419608, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.121569, 0.513726, 0.243137, 1)
expand_margin_left = 20.0
expand_margin_top = 15.0
expand_margin_right = 20.0
expand_margin_bottom = 15.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_56ki1"]
bg_color = Color(0.121569, 0.513726, 0.243137, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.121569, 0.513726, 0.243137, 1)
expand_margin_left = 20.0
expand_margin_top = 15.0
expand_margin_right = 20.0
expand_margin_bottom = 15.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4f153"]
bg_color = Color(0.121569, 0.513726, 0.243137, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.121569, 0.513726, 0.243137, 1)
expand_margin_left = 20.0
expand_margin_top = 15.0
expand_margin_right = 20.0
expand_margin_bottom = 15.0

[node name="SignUp" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_0l8rw")
script = ExtResource("1_jw0nw")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Panel/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 100

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(200, 2.08165e-12)
layout_mode = 2
theme_override_constants/separation = 10

[node name="TextureRect" type="TextureRect" parent="Panel/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
texture = ExtResource("3_nxv4n")
expand_mode = 5

[node name="TitleMargin" type="MarginContainer" parent="Panel/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 20
theme_override_constants/margin_bottom = 20

[node name="SignupStateLabel" type="Label" parent="Panel/HBoxContainer/MarginContainer/VBoxContainer/TitleMargin"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
text = "Create your new account"
horizontal_alignment = 1
autowrap_mode = 2

[node name="EmailLabel" type="Label" parent="Panel/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Email"

[node name="EmailInput" type="LineEdit" parent="Panel/HBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 10
placeholder_text = "player@email.com"

[node name="PasswordLabel1" type="Label" parent="Panel/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Password"

[node name="PasswordInput" type="LineEdit" parent="Panel/HBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 10
placeholder_text = "******"
secret = true

[node name="PasswordLabel2" type="Label" parent="Panel/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Confirm Password"

[node name="PasswrodInput2" type="LineEdit" parent="Panel/HBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 10
placeholder_text = "******"
secret = true

[node name="MarginContainer" type="MarginContainer" parent="Panel/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/margin_top = 40

[node name="GridContainer" type="GridContainer" parent="Panel/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="SignUpButton" type="Button" parent="Panel/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Sign Up"

[node name="LoginButton" type="Button" parent="Panel/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_8ybq3")
theme_override_styles/hover = SubResource("StyleBoxFlat_56ki1")
theme_override_styles/pressed = SubResource("StyleBoxFlat_4f153")
text = "Login instead?"

[connection signal="pressed" from="Panel/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer/GridContainer/SignUpButton" to="." method="_on_sign_up_button_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer/GridContainer/LoginButton" to="." method="_on_login_button_pressed"]
